--- a/package.json
+++ b/package.json
@@ -6,5 +6,13 @@
   "repository": "git@github.com:dmistomin/dms-react-component-archive.git",
   "author": "Dmitriy Istomin <distomin+git@pm.me>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "typescript": "^5.5.4"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
